@@ -109,21 +109,21 @@ L<DiaColloDB::Persistent|DiaColloDB::Persistent>.
 
  %defaults = $CLASS_OR_OBJ->defaults();
 
-called by new() and promote() to provide default options on a subclass basis.
+called by L<new()|/new> and L<promote()|/promote> to provide default options on a subclass basis.
 
 =item promote
 
  $cli_or_undef = $cli->promote($class,%opts);
 
 Promotes $cli to (a subclass of) $class.
-Ensures $class-E<gt>defaults() keys are set for $cli.
-Client options are clobbered with %opts.
+Ensures $class-E<gt>L<defaults()|/defaults> keys are set for C<$cli>.
+Client options are clobbered with C<%opts>.
 
 =item DESTROY
 
  undef = $obj->DESTROY;
 
-destructor calls close() if necessary
+destructor calls L<close()|/close> if necessary.
 
 =back
 
@@ -142,7 +142,13 @@ destructor calls close() if necessary
  $cli_or_undef = $cli->open($url,%opts);
  $cli_or_undef = $cli->open();
 
-calls open_list(), open_file(), or open_http() as appropriate.
+calls L<open_list()|/open_list>, L<open_file()|/open_file>, or L<open_http()|/open_http> as appropriate
+depending on the datatype or scheme of C<$url>;
+may re-bless() $cli into an appropriate package.
+If C<$url> is passed as a string, its query string
+will be parsed by the <URI::query_form()|URI/uri-query_form> method
+and used to pass options to the (promoted) client subclass.
+
 
 =item open_file
 
@@ -151,18 +157,22 @@ calls open_list(), open_file(), or open_http() as appropriate.
 
 opens a local file url;
 may re-bless() $cli into an appropriate package.
+Called by L<open()|/open> for URLs with a C<file://> scheme or without an explicit URL scheme.
 
-B<OVERRIDE> in subclasses supporting file urls.
+B<OVERRIDE> in subclasses supporting file urls;
+see L<DiaColloDB::Client::file> for the default implementation.
 
 =item open_http
 
  $cli_or_undef = $cli->open_http($http_url,%opts);
  $cli_or_undef = $cli->open_http()
 
-opens a http url;
+opens an http url;
 may re-bless() $cli into an appropriate package.
+Called by L<open()|/open> for URLs with an C<http://> or C<https://> scheme.
 
-B<OVERRIDE> in subclasses supporting http urls.
+B<OVERRIDE> in subclasses supporting http urls,
+see L<DiaColloDB::Client::http> for the default implementation.
 
 =item open_list
 
@@ -172,8 +182,10 @@ B<OVERRIDE> in subclasses supporting http urls.
 
 opens a list url;
 may re-bless() $cli into an appropriate package.
+Called by L<open()|/open> for ARRAY-ref URLs or string URLs with a C<list://> scheme.
 
-B<OVERRIDE> in subclasses supporting list urls.
+B<OVERRIDE> in subclasses supporting list urls,
+see L<DiaColloDB::Client::list> for the default implementation.
 
 =item close
 
